# kickasstorrent

./: Cargo.toml  README.md
.github/workflows/: release-for-mac.yml  release.yml  rust-clippy.yml
src/: constants.rs  formater.rs  lib.rs  main.rs  parser.rs  types.rs
